# HoloCure-Translation-Launcher

./: CMakeLists.txt  main.cpp  my.rc  versions.xml
